--- a/src/usermanagement/templates/login.html
+++ b/src/usermanagement/templates/login.html
@@ -1,24 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-{% load static %}
+{% extends "usermanagement_base.html" %}
 
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
-  <title>SB Admin - Start Bootstrap Template</title>
-  <!-- Bootstrap core CSS-->
-  <link href="{% static "usermanagement/css/bootstrap.min.css" %}" rel="stylesheet">
-  <!-- Custom fonts for this template-->
-  <link href="{% static "usermanagement/css/font-awesome.min.css" %}" rel="stylesheet" type="text/css">
-  <!-- Custom styles for this template-->
-  <link href="{% static "usermanagement/css/sb-admin.css" %}" rel="stylesheet">
-</head>
-
-<body class="bg-dark">
-  <div class="container">
+{% block main_content %}
+<div class="container">
     <div class="card card-login mx-auto mt-5">
       <div class="card-header">Login</div>
       <div class="card-body">
@@ -37,8 +20,21 @@
                 <input class="form-check-input" type="checkbox"> Remember Password</label>
             </div>
           </div>
-          <input type="submit" value="Login">
-          <a class="btn btn-primary btn-block" href="index.html">Login</a>
+          <input class="btn btn-primary btn-block" type="submit" value="Login">
+
+          {% if msg %}
+            <div class="msg">
+
+              {% if msg.ok %}
+                <div class='error'>{{ msg.ok }}</div>
+              {% endif %}
+              {% if msg.error %}
+                <div class='error'>{{ msg.error }}</div>
+              {% endif %}
+
+            </div>
+          {% endif %}
+
         </form>
         <div class="text-center">
           <a class="d-block small mt-3" href="register.html">Register an Account</a>
@@ -46,8 +42,5 @@
         </div>
       </div>
     </div>
-  </div>
-
-</body>
-
-</html>
+</div>
+{% endblock %}
