Layout and some other changes

--- a/src/frontoffice/templates/frontoffice_base.html
+++ b/src/frontoffice/templates/frontoffice_base.html
@@ -22,7 +22,7 @@
 
 {% block main_navigation %}{% endblock %}
 
-{% block main_content %}{% endblock %}
+{% block body %}{% endblock %}
 
 {% block main_footer %}{% endblock %}
 
