Layout and some other changes

--- a/src/frontoffice/templates/frontoffice_layout.html
+++ b/src/frontoffice/templates/frontoffice_layout.html
@@ -23,9 +23,15 @@
                 <li class="nav-item">
                     <a class="nav-link" href="contact.html">Contact</a>
                 </li>
+                {% if logged %}
                 <li class="nav-item">
-                    <a class="nav-link" href="accounts/login/">Login</a>
+                    <a class="nav-link" href="/accounts/logout/">Logout</a>
                 </li>
+                {% else %}
+                <li class="nav-item">
+                    <a class="nav-link" href="/accounts/login/">Login</a>
+                </li>
+                {% endif %}
             </ul>
         </div>
     </div>
