--- a/src/usermanagement/templates/login.html
+++ b/src/usermanagement/templates/login.html
@@ -26,7 +26,7 @@
             <div class="msg">
 
               {% if msg.ok %}
-                <div class='error'>{{ msg.ok }}</div>
+                <div class='ok'>{{ msg.ok }}</div>
               {% endif %}
               {% if msg.error %}
                 <div class='error'>{{ msg.error }}</div>
